109 ==> 458850 - Not valid createdate.
110 ==> 458921 - Maintenance > Sync Metadata and Database (Sync Direction: From image metadata to database) does not work for disabled or deleted tags.
111 ==> 459129 - Duplicate tags are displayed below thumbnail when tags are repeated in tag hierarchy.
112 ==> 459537 - "Ignored" face regions should not be saved into XMP metadata.
113 ==> 459497 - digiKam fails to load images.
114 ==> 459702 - digiKam git Mariadb issue.
115 ==> 432265 - No error message when digiKam fails to read XMP metadata from image file.
116 ==> 459898 - Import video files into digiKam uses current date but not metadata date.
117 ==> 436345 - Renamed FaceTags not written to file metadata.
118 ==> 452539 - People tags are not shown correctly.
119 ==> 316856 - Add text-recognition system.
120 ==> 459928 - Tags/keywords are not written back to MP4 video files, even with exiftool being configured.
121 ==> 432369 - Wrong time for mp4 in _almost_ all places, metadata differs from filesystem/other apps. DB issues?
122 ==> 438960 - Add support for searching images created in a time interval.
123 ==> 458082 - MP4 video failed to update metadata timestamp.
124 ==> 426612 - Highlighting Album in TreeView on mouse over.
125 ==> 331167 - Import images from folder create date based folders from images Exif.
126 ==> 361467 - Indicate (shade?) drop target when copying or moving images.
127 ==> 388011 - Suggested improvement of Drag&Drop images from one album to another.
128 ==> 460251 - digiKam git build error.
129 ==> 459027 - Creating large thumbnails issue with digiKam-8.0.0.
130 ==> 460321 - Overlapping faces region.
131 ==> 453840 - digiKam git build error with ffmpeg 5.
132 ==> 402322 - During face detection, the "People" / "Unconfirmed" (or "Unknown") tab content keeps jumping around.
133 ==> 457461 - Ability to ignore all faces except tag marked.
134 ==> 460520 - [FEATURE REQUEST] Ignore rest of not tagged faces in picture.
135 ==> 