@@ -170,4 +170,9 @@ BUGFIXES:
 132 ==> 402322 - During face detection, the "People" / "Unconfirmed" (or "Unknown") tab content keeps jumping around.
 133 ==> 457461 - Ability to ignore all faces except tag marked.
 134 ==> 460520 - [FEATURE REQUEST] Ignore rest of not tagged faces in picture.
-135 ==> 
+135 ==> 460568 - Star rating not saved.
+136 ==> 
+137 ==> 
+138 ==> 
+139 ==> 
+140 ==> 
